// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

// ___ Products Data ___
Table products {
  id int [PK, increment, not null]
  name varchar(255) [not null]
  slug varchar(255) [not null, unique]
  description text
  category_id int
  status enum('draft','active','archived') [not null]
  created_at timestamp [default: 'now()', not null]
  updated_at timestamp [default: 'now()', not null]
}
Ref: products.category_id >? categories.id [delete: set null]

Table variants {
  id int [PK, increment, not null]
  product_id int [not null]
  sku varchar(100) [not null]
  price_cents int [not null]
  compare_price_cents int
  stock_quantity int [not null]
  size varchar(20)
  weight_grams int
  created_at timestamp [default: 'now()', not null]
  updated_at timestamp [default: 'now()', not null]
}
Ref: variants.product_id > products.id [delete: cascade]

Table product_images {
  id int [PK, increment, not null]
  product_id int [not null]
  variant_id int
  image_url varchar(500) [not null]
  is_primary boolean [not null]
  sort_order int [not null]
  created_at timestamp [default: 'now()', not null]
  updated_at timestamp [default: 'now()', not null]
}
Ref: product_images.product_id > products.id [delete: cascade]
Ref: product_images.variant_id >? variants.id [delete: set null]

// ___ About Product ____
Table categories {
  id int [PK, increment, not null]
  name varchar(255) [not null, unique]
  description text
  imageUrl varchar(500)  
  created_at timestamp [default: 'now()', not null]
  updated_at timestamp [default: 'now()', not null]
}

Table collections {
  id int [PK, increment, not null]
  name varchar(255) [not null, unique]
  description text
  imageUrl varchar(500)  
  created_at timestamp [default: 'now()', not null]
  updated_at timestamp [default: 'now()', not null]
}

Table products_collections {
  product_id int [not null]
  collection_id int [not null]
  created_at timestamp [default: 'now()', not null]
  updated_at timestamp [default: 'now()', not null]
}
Ref: products_collections.product_id > products.id [delete: cascade]
Ref: products_collections.collection_id > collections.id [delete: cascade]

// ___ Cart System
Table carts {
  id int [PK, increment, not null]
  user_id int [unique, null]
  session_id varchar(255) [unique]
  created_at timestamp [default: 'now()', not null]
  updated_at timestamp [default: 'now()', not null]
}
Ref: carts.user_id - users.id [delete: cascade]
// Ref: carts.session_id - sessions.id [delete: cascade]

Table cart_items {
  id int [PK, increment, not null]
  cart_id int [not null]
  variant_id int [not null]
  quantity int [default: 1, not null]
  created_at timestamp [default: 'now()', not null]
  updated_at timestamp [default: 'now()', not null]
}
Ref: cart_items.cart_id > carts.id [delete: cascade]
Ref: cart_items.variant_id > variants.id [delete: cascade]

// ___ Order system ___
Table orders {
  id int [PK, increment, not null]
  order_number varchar(50) [not null, unique]
  customer_email varchar(255) [not null]
  customer_phone varchar(50)
  
  // Optional foreign key to registered users
  // NULL = Guest checkout or deleted account
  user_id int

  // Financial columns
  // Clean names (values stored in cents: $85.00 -> 8500)
  subtotal int [not null]
  shipping_fee int [default: 0, not null]
  tax int [default: 0, not null]
  total int [not null]

  // Statuses
  order_status varchar [default: 'pending', not null]
  payment_status varchar [default: 'pending', not null]

  // deliver & billing addresses snapshots
  shipping_address jsonb [not null]
  billing_address jsonb

  // timestamps
  created_at timestamp [default: 'now()', not null]
  updated_at timestamp [default: 'now()', not null]
}
Ref: orders.user_id >? users.id [delete: set null]

Table order_items {
  id int [PK, increment, not null]
  order_id int [not null]

  // Keep foreign key optional or set null on delete so historical order data remains intact if variant/product is deleted
  variant_id int

  // Historical Snapshot Data (Frozen at purchase time)
  product_name varchar(255) [not null]
  sku varchar(100) [not null]
  color varchar (50) [not null]
  size varchar(20) [not null]
  unit_price int [not null]
  quantity int [not null]
}
Ref: order_items.order_id > orders.id [delete: cascade]
Ref: order_items.variant_id >? variants.id [delete: set null]

// ___ Auth ___
Table users {
	id text [PK, not null]
	name text [not null]
	email text [not null]
	email_verified boolean [not null, default: false]
	image text
  created_at timestamp [default: 'now()', not null]
  updated_at timestamp [default: 'now()', not null]
}
